--- a/web-sdk/package.json
+++ b/web-sdk/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "src/index.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"compile": "tsc"
 	},
 	"devDependencies": {
 		"eslint": "^8.0.0",
