--- a/web-sdk/.eslintrc
+++ b/web-sdk/.eslintrc
@@ -2,8 +2,12 @@
 	"rules": {
 		"no-unused-vars": "error",
 		"no-dupe-keys": "error",
-		"no-unused-expressions": "warn",
-		"unused-imports/no-unused-imports": "error",
-		"unused-imports/no-unused-vars": "error"
+		"no-unused-expressions": "warn"
+	},
+	"parserOptions": {
+		"ecmaVersion": "latest"
+	},
+	"env": {
+		"es6": true
 	}
 }
