--- a/web-sdk/package.json
+++ b/web-sdk/package.json
@@ -4,13 +4,17 @@
 	"description": "",
 	"main": "src/index.ts",
 	"scripts": {
-		"compile": "tsc"
+		"compile": "tsc",
+		"bundle": "webpack",
+		"build": "npm run compile && npm run bundle"
 	},
 	"devDependencies": {
 		"eslint": "^8.0.0",
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"prettier": "^2.7.1",
-		"typescript": "^4.8.3"
+		"typescript": "^4.8.3",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
 	},
 	"keywords": [],
 	"author": "",
