--- a/web-sdk/package.json
+++ b/web-sdk/package.json
@@ -18,8 +18,8 @@
 		"webpack-cli": "^4.10.0"
 	},
 	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"author": "Devesh Kumar",
+	"license": "MIT",
 	"dependencies": {
 		"uuid": "^9.0.0"
 	}
