--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
 		"framer-motion": "^7.6.4",
+		"frappe-gantt": "^0.6.1",
 		"next": "13.0.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
