--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 		"@chakra-ui/react": "^2.3.7",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"@supabase/supabase-js": "^2.0.5",
 		"framer-motion": "^7.6.4",
 		"next": "13.0.2",
 		"react": "18.2.0",
