--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.6.0",
-		"swr": "^1.3.0"
+		"swr": "^1.3.0",
+		"zustand": "^4.1.4"
 	}
 }
