--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.6.0",
 		"swr": "^1.3.0",
+		"waterfall.draw": "^1.0.2",
 		"zustand": "^4.1.4"
 	}
 }
