--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.6.0",
+		"recharts": "^2.1.16",
 		"swr": "^1.3.0",
 		"waterfall.draw": "^1.0.3",
 		"zustand": "^4.1.4"
