--- a/web-sdk/package.json
+++ b/web-sdk/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "spot-web",
-	"version": "0.0.19",
+	"version": "1.0.0",
 	"description": "",
-	"main": "src/index.ts",
+	"main": "index.js",
 	"scripts": {
 		"compile": "tsc",
 		"bundle": "webpack",
